--- a/src/components/dragons/dragon.css
+++ b/src/components/dragons/dragon.css
@@ -11,7 +11,7 @@
 }
 
 .dragon-img {
-  width: 30%;
+  width: 70%;
   border-radius: 3px;
 }
 
@@ -43,4 +43,8 @@
   border-radius: 3px;
   border: none;
   cursor: pointer;
+}
+
+@media (width <= 740px) {
+  
 }
